--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,22 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    // Accompanist
+    implementation "com.google.accompanist:accompanist-insets:0.21.0-beta"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.4.0-rc01"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.0"
+
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+
+    // ConstraintLayout
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
+
+    // Foundation
+    implementation "androidx.compose.foundation:foundation:1.1.0-rc01"
 }
