Add database dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -79,4 +80,8 @@ dependencies {
 
     // Full Material icon set
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
+    // Room
+    implementation "androidx.room:room-ktx:2.4.1"
+    kapt "androidx.room:room-compiler:2.4.1"
 }
