Add reminder notifications

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,8 @@ dependencies {
     // Room
     implementation "androidx.room:room-ktx:2.4.1"
     kapt "androidx.room:room-compiler:2.4.1"
+
+    // Work Manager
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
+
 }
